# config-wizard

./: .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
config_wizard/: mapper.py  schema.py  utils.py
config_wizard/backends/: base.py  streamlit.py
tests/: conftest.py  test_mapper.py  test_schema.py  test_utils.py
